# alphai-news-to-email

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: _shared.py  dashboard.py  quickstart.py
src/alphai_news_email/: __init__.py  __main__.py  cli.py  config.py  digest.py  email_sender.py  store.py  watcher.py
tests/: test_digest.py
