[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alphai-news-to-email"
version = "0.1.0"
description = "Email yourself high-relevance AlphaAI financial news — a runnable example app built on alphai-sdk."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AlphaAI", email = "support@alphai.io" }]
keywords = [
    "alphai",
    "alphai-sdk",
    "financial-news",
    "email",
    "alerts",
    "smtp",
    "sentiment",
    "insider-trading",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Communications :: Email",
]
dependencies = ["alphai-sdk>=0.1.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
alphai-news-email = "alphai_news_email.cli:main"

[project.urls]
Homepage = "https://alphai.io"
"SDK on PyPI" = "https://pypi.org/project/alphai-sdk/"
"API keys" = "https://alphai.io/account/api-keys"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
